feat: Implemented refreshToken function
