# controllers/credentialManager.js
@@ -7,3 +7,7 @@ export function login(req, res) {
 export function register(req, res) {
     service.register(req, res);
 }
+
+export function refreshToken(req, res) {
+    service.refreshToken(req, res);
+}
